Refactored to no longer autowire all the lists
Doesn't currently work sense the SchoolList is never populated, but does start.